[package]
name = "groupcache-ng-pb"
version = "0.4.0"
edition = "2021"
authors = ["Patryk Wojtyczek", "Henrik Johansson <dahankzter@gmail.com>"]
categories = ["caching", "web-programming", "concurrency", "asynchronous"]
description = "Protocol buffer definitions for groupcache-ng (internal crate)"
homepage = "https://github.com/dahankzter/groupcache"
keywords = ["distributed", "cache", "shard", "memcached", "gRPC"]
license = "MIT"
readme = "../readme.md"
repository = "https://github.com/dahankzter/groupcache"

[dependencies]
prost = "0.14.1"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = { version = "0.14.2" }
tokio-stream = "0.1"

[build-dependencies]
tonic-prost-build = { version = "0.14.2" }