[package]
name = "groupcache"
version = "0.3.0"
authors = ["Patryk Wojtyczek"]
edition = "2021"
categories = ["caching", "web-programming", "concurrency", "asynchronous"]
description = """
groupcache is a distributed caching and cache-filling library, \
intended as a replacement for a pool of memcached nodes in many cases. \
It shards by key to select which peer is responsible for that key.\
"""
homepage = "https://github.com/Petroniuss/groupcache"
keywords = ["distributed", "cache", "shard", "memcached", "gRPC"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/Petroniuss/groupcache"

[features]
bincode = ["dep:bincode"]
kubernetes = ["dep:kube", "dep:k8s-openapi"]

[dependencies]
groupcache-pb = { path = "../groupcache-pb", version = "0.3.0" }
tonic = "0.14.2"
hashring = "0.3.3"
anyhow = "1.0"
thiserror = "2.0"
arc-swap = "1"
tokio = { version = "1.34" , features = ["rt", "sync", "time"]}
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
bincode = { version = "1", optional = true }
async-trait = "0.1.74"
singleflight-async = "0.2.0"
moka = { version = "0.12.1", features = ["future"] }
log = "0.4.20"
metrics = "0.24.0"
kube = { version = "3", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.27", features = ["latest"], optional = true }

[dev-dependencies]
cargo-husky = { workspace = true }
pretty_assertions = "1.4.0"
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio = { version = "1.34", features = ["time", "test-util", "rt", "macros"] }
rstest = "0.26.1"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
parking_lot = "0.12"
bincode = "1"

[[bench]]
name = "codec_bench"
harness = false

[[bench]]
name = "routing_contention"
harness = false
