[package]
name = "groupcache-ng"
version = "0.4.0"
authors = ["Patryk Wojtyczek", "Henrik Johansson <dahankzter@gmail.com>"]
edition = "2021"
categories = ["caching", "web-programming", "concurrency", "asynchronous"]
description = """
A distributed caching and cache-filling library with near-realtime \
streaming invalidation, lock-free routing, and built-in service discovery. \
Fork of groupcache with added features — pending upstream merge.\
"""
homepage = "https://github.com/dahankzter/groupcache"
keywords = ["distributed", "cache", "invalidation", "consistent-hashing", "gRPC"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/dahankzter/groupcache"

[lib]
name = "groupcache"

[features]
bincode = ["dep:bincode"]
kubernetes = ["dep:kube", "dep:k8s-openapi"]
consul = ["dep:reqwest"]

[dependencies]
groupcache-pb = { path = "../groupcache-pb", version = "0.4.0", package = "groupcache-ng-pb" }
tonic = "0.14.2"
hashring = "0.3.3"
anyhow = "1.0"
thiserror = "2.0"
arc-swap = "1"
tokio = { version = "1.34" , features = ["rt", "sync", "time"]}
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
bincode = { version = "1", optional = true }
async-trait = "0.1.74"
singleflight-async = "0.2.0"
moka = { version = "0.12.1", features = ["future"] }
log = "0.4.20"
metrics = "0.24.0"
kube = { version = "3", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.27", features = ["latest"], optional = true }
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = true }

[dev-dependencies]
cargo-husky = { workspace = true }
pretty_assertions = "1.4.0"
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio = { version = "1.34", features = ["time", "test-util", "rt", "macros"] }
rstest = "0.26.1"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
parking_lot = "0.12"
bincode = "1"

[[bench]]
name = "codec_bench"
harness = false

[[bench]]
name = "routing_contention"
harness = false
